<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <EditText
            android:id="@+id/shipmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shipmentHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Home Address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shipmentCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="City"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shipmentState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="State "
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shipmentZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Zip Code"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shipmentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/shipmentPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="PhoneNumber"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="Payment Method?"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/paymentMethods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/cardPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Debit or Credit"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/checkPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="E-Check"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/giftPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gift Card"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="386dp"
            android:orientation="vertical" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark">

    </RelativeLayout>

    <Button
        android:id="@+id/payButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="-72dp"
        android:background="@drawable/button_edit_background"
        android:text="Complete Payment"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/relativeLayout2"
        app:layout_anchorGravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
