<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_edit_background"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/username"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="UserName"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sign Up"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>